--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -13,7 +13,37 @@
     "toggleTheme": "Toggle theme",
     "openNote": "Open note",
     "untitled": "Unitled note",
-    "lockedNote": "Locked note"
+    "lockedNote": "Locked note",
+    "labelSuggestion": "Filtered label suggestions",
+    "selectLabel": "Select label",
+    "filterednotes": "Filtered notes",
+    "insertRowAfter": "Insert row after",
+    "insertRowBefore": "Insert row before",
+    "deleteRow": "Delete current row",
+    "insertColumnLeft": "Insert column left",
+    "insertColumnRight": "Insert column right",
+    "deleteColumn": "Delete current column",
+    "deleteTable": "Delete table",
+    "bold": "Bold",
+    "italic": "Italic",
+    "underline": "Underline",
+    "strikethrough": "Strikethrough",
+    "highlight": "Highlight",
+    "highlightOptions": "Highlight color options",
+    "removehighlight": "Remove highlighting",
+    "setColor": "Set highlight color to",
+    "orange": "orange",
+    "yellow": "yellow",
+    "green": "green",
+    "blue": "blue",
+    "purple": "purple",
+    "pink": "pink",
+    "red": "red",
+    "subscript": "Subscript",
+    "superscript": "Superscript",
+    "link": "Link",
+    "fileUploadInput": "Upload a file",
+    "fileUpload": "File upload section"
   },
   "settings": {
     "title": "Settings",
@@ -230,9 +260,9 @@
     "heading5Description": "Detailed subsections.",
     "heading6Label": "Heading 6",
     "heading6Description": "Smallest heading for notes.",
-    "quoteLabel": "Quote",
+    "quoteLabel": "Quote Block",
     "quoteDescription": "Format text as a quote.",
-    "codeLabel": "Code",
+    "codeLabel": "Code Block",
     "codeDescription": "Insert a code block.",
     "tableLabel": "Table",
     "tableDescription": "Insert a structured data table.",
@@ -258,7 +288,7 @@
     "mathBlockDescription": "Insert a math block.",
     "mermaidBlockLabel": "Mermaid Block",
     "mermaidBlockDescription": "Insert a Mermaid diagram.",
-    "embedLabel": "Embed",
+    "embedLabel": "Embed Block",
     "embedDescription": "Embed a website.",
     "drawingBlockLabel": "Drawing Block",
     "drawingBlockDescription": "Insert a drawing block."
