🛠️ Icons, Improvements and more
- Share as PDF and .bea
- Custom icon (🍎)
- Fixed issues #24 #21 #20
- Design improvements in dialogs
- Merge and split tables
- Improved search
- Replaced Focus mode with reader mode

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -14,8 +14,8 @@
     "openNote": "Open note",
     "untitled": "Unitled note",
     "lockedNote": "Locked note",
-    "labelSuggestion": "Filtered label suggestions",
-    "selectLabel": "Select label",
+    "Suggestion": "Filtered  suggestions",
+    "select": "Select ",
     "filterednotes": "Filtered notes",
     "insertRowAfter": "Insert row after",
     "insertRowBefore": "Insert row before",
@@ -64,7 +64,8 @@
     "editMermaid": "Edit Mermaid Block",
     "webdavUrl": "Webdav URL",
     "hidePasswd": "Hide Password",
-    "showPasswd": "Show Password"
+    "showPasswd": "Show Password",
+    "mergeorSplit": "Merge or split"
   },
   "settings": {
     "title": "Settings",
@@ -82,7 +83,8 @@
     "Sync": "Sync",
     "expandPage": "Expand Page",
     "CollapsibleHeading": "Collapsible Heading",
-    "scribbleCompatibility": "Scribble compatibility"
+    "scribbleCompatibility": "Scribble compatibility",
+    "appIcon": "App Icon"
   },
   "sync": {
     "Dropbox": "Dropbox",
@@ -169,7 +171,7 @@
     "wrongpasswd": "Incorrect password. Note cannot be unlocked.",
     "unlock": "Unlock",
     "cancel": "cancel",
-    "addLabel": "Add Label",
+    "add": "Add ",
     "searchHeadings": "Search Headings",
     "close": "Close",
     "mermaidContent": "Enter Mermaid code here...",
@@ -210,7 +212,7 @@
   },
   "search": {
     "searchNotes": "Search Notes",
-    "selectlabel": "Select Label",
+    "select": "Select ",
     "lastUpdated": "Last Updated",
     "creationDate": "Creation Date",
     "alphabetical": "Alphabetical"
@@ -262,59 +264,33 @@
     "license": "License",
     "legal": "Legal"
   },
-  "menuItems": {
-    "fileLabel": "File",
-    "fileDescription": "Attach a file.",
-    "imageLabel": "Image",
-    "imageDescription": "Insert an image.",
-    "videoLabel": "Video",
-    "videoDescription": "Embed a video.",
-    "paragraphLabel": "Paragraph",
-    "paragraphDescription": "Create a standard paragraph.",
-    "heading1Label": "Heading 1",
-    "heading1Description": "Largest heading for main titles.",
-    "heading2Label": "Heading 2",
-    "heading2Description": "Subheading for major sections.",
-    "heading3Label": "Heading 3",
-    "heading3Description": "Subsections under Heading 2.",
-    "heading4Label": "Heading 4",
-    "heading4Description": "Smaller subsection titles.",
-    "heading5Label": "Heading 5",
-    "heading5Description": "Detailed subsections.",
-    "heading6Label": "Heading 6",
-    "heading6Description": "Smallest heading for notes.",
-    "quoteLabel": "Quote Block",
-    "quoteDescription": "Format text as a quote.",
-    "codeLabel": "Code Block",
-    "codeDescription": "Insert a code block.",
-    "tableLabel": "Table",
-    "tableDescription": "Insert a structured data table.",
-    "bulletListLabel": "Bullet List",
-    "bulletListDescription": "Create a bulleted list.",
-    "orderedListLabel": "Ordered List",
-    "orderedListDescription": "Create a numbered list.",
-    "checklistLabel": "Checklist",
-    "checklistDescription": "Add a checklist for tasks.",
-    "blackCalloutLabel": "Black Callout",
-    "blackCalloutDescription": "Add a black callout.",
-    "blueCalloutLabel": "Blue Callout",
-    "blueCalloutDescription": "Add a blue callout.",
-    "greenCalloutLabel": "Green Callout",
-    "greenCalloutDescription": "Add a green callout.",
-    "purpleCalloutLabel": "Purple Callout",
-    "purpleCalloutDescription": "Add a purple callout.",
-    "redCalloutLabel": "Red Callout",
-    "redCalloutDescription": "Add a red callout.",
-    "yellowCalloutLabel": "Yellow Callout",
-    "yellowCalloutDescription": "Add a yellow callout.",
-    "mathBlockLabel": "Math Block",
-    "mathBlockDescription": "Insert a math block.",
-    "mermaidBlockLabel": "Mermaid Block",
-    "mermaidBlockDescription": "Insert a Mermaid diagram.",
-    "embedLabel": "Embed Block",
-    "embedDescription": "Embed a website.",
-    "drawingBlockLabel": "Drawing Block",
-    "drawingBlockDescription": "Insert a drawing block."
+  "menu": {
+    "file": "File",
+    "image": "Image",
+    "video": "Video",
+    "paragraph": "Paragraph",
+    "heading1": "Heading 1",
+    "heading2": "Heading 2",
+    "heading3": "Heading 3",
+    "heading4": "Heading 4",
+    "heading5": "Heading 5",
+    "heading6": "Heading 6",
+    "quote": "Quote Block",
+    "code": "Code Block",
+    "table": "Table",
+    "bulletList": "Bullet List",
+    "orderedList": "Ordered List",
+    "checklist": "Checklist",
+    "blackCallout": "Black Callout",
+    "blueCallout": "Blue Callout",
+    "greenCallout": "Green Callout",
+    "purpleCallout": "Purple Callout",
+    "redCallout": "Red Callout",
+    "yellowCallout": "Yellow Callout",
+    "mathBlock": "Math Block",
+    "mermaidBlock": "Mermaid Block",
+    "embed": "Embed Block",
+    "drawingBlock": "Drawing Block"
   },
   "tiptap": {
     "placeholder": "Write something... or type \"/\" for commands."
