🛠️ Improve Sync, Style, Undo and Redo

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -194,7 +194,9 @@
     "share": "Share",
     "searchPage": "Search Page",
     "ReadingMode": "Reading Mode",
-    "deleteTable": "Delete Table"
+    "deleteTable": "Delete Table",
+    "undo": "Undo",
+    "redo": "Redo"
   },
   "archive": {
     "archived": "Archived",
