perf: improved toolbar

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -282,12 +282,7 @@
     "image": "Image",
     "video": "Video",
     "paragraph": "Paragraph",
-    "heading1": "Heading 1",
-    "heading2": "Heading 2",
-    "heading3": "Heading 3",
-    "heading4": "Heading 4",
-    "heading5": "Heading 5",
-    "heading6": "Heading 6",
+    "heading": "Heading",
     "quote": "Quote Block",
     "code": "Code Block",
     "table": "Table",
