chore: upgrade android to capacitor 7

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -278,6 +278,8 @@
     "legal": "Legal"
   },
   "menu": {
+    "noData": "No data",
+    "Add": "Add",
     "file": "File",
     "image": "Image",
     "video": "Video",
