fix: spaces note title

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -16,6 +16,7 @@
     "lockedNote": "Locked note",
     "Suggestion": "Filtered  suggestions",
     "select": "Select ",
+    "label": "Label",
     "filterednotes": "Filtered notes",
     "insertRowAfter": "Insert row after",
     "insertRowBefore": "Insert row before",
