fix: fixed issue #66

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -331,7 +331,7 @@
     "code": "Code Block",
     "table": "Table",
     "bulletList": "Bullet List",
-    "orderedlist": "Ordered List",
+    "orderedList": "Ordered list",
     "checklist": "Checklist",
     "blackCallout": "Black Callout",
     "blueCallout": "Blue Callout",
